--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://username.github.io"
+url: "https://threeberries.github.io/"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: My website
+title: Three Berries
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: "이것 저것 AI기술들로 무엇을 해볼 수 있을까?"
 
 # --- Navigation bar options --- #
 
