--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ share-links-active:
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-#disqus: ""
+disqus: "threeberries"
 
 # Facebook App ID
 # fb_app_id: ""
